[gd_scene load_steps=14 format=2]

[ext_resource path="res://main/game/world/scripts/projectiles.gd" type="Script" id=1]
[ext_resource path="res://main/game/scripts/players.gd" type="Script" id=2]
[ext_resource path="res://main/game/world/world.gd" type="Script" id=3]
[ext_resource path="res://entities/soldier/assets/bar-bg.png" type="Texture" id=4]
[ext_resource path="res://entities/soldier/assets/bar-fill.png" type="Texture" id=5]
[ext_resource path="res://levels/terrain.tscn" type="PackedScene" id=6]
[ext_resource path="res://libs/state_machine/state_machine.gd" type="Script" id=7]
[ext_resource path="res://main/game/world/scripts/hud.gd" type="Script" id=8]
[ext_resource path="res://entities/soldier/player/soldier_player.tscn" type="PackedScene" id=9]
[ext_resource path="res://main/game/world/states/world_postturn.gd" type="Script" id=10]
[ext_resource path="res://main/game/world/states/world_preturn.gd" type="Script" id=11]
[ext_resource path="res://main/game/world/states/world_turn.gd" type="Script" id=12]
[ext_resource path="res://entities/soldier/bots/soldier_bot_normal.tscn" type="PackedScene" id=13]

[node name="World" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 8 )

[node name="root" type="Control" parent="HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="bottom" type="Control" parent="HUD/root"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -50.0
__meta__ = {
"_edit_lock_": true
}

[node name="charge_bar" type="TextureProgress" parent="HUD/root/bottom"]
margin_right = 40.0
margin_bottom = 14.0
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Terrain" parent="." instance=ExtResource( 6 )]

[node name="Players" type="Node2D" parent="."]
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="1" parent="Players" instance=ExtResource( 9 )]
position = Vector2( 90, 60 )

[node name="2" parent="Players" groups=[
"entity",
"soldier",
] instance=ExtResource( 13 )]
position = Vector2( 227.743, 80.9086 )
CHARGE_TIME = 3.0

[node name="Projectiles" type="Node2D" parent="."]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 7 )
actor_path = NodePath("..")

[node name="Preturn" type="Node" parent="StateMachine"]
script = ExtResource( 11 )
fsm_path = NodePath("..")

[node name="DurationTimer" type="Timer" parent="StateMachine/Preturn"]
wait_time = 3.0
one_shot = true

[node name="Turn" type="Node" parent="StateMachine"]
script = ExtResource( 12 )
fsm_path = NodePath("..")

[node name="DurationTimer" type="Timer" parent="StateMachine/Turn"]
wait_time = 15.0
one_shot = true

[node name="Postturn" type="Node" parent="StateMachine"]
script = ExtResource( 10 )
fsm_path = NodePath("..")

[node name="DurationTimer" type="Timer" parent="StateMachine/Postturn"]
wait_time = 3.0
one_shot = true
[connection signal="terrain_updated" from="Terrain" to="." method="_on_Level_terrain_updated"]
[connection signal="terrain_updated" from="Terrain" to="Players" method="_on_Level_terrain_updated"]
[connection signal="charge_updated" from="Players/1" to="HUD" method="_on_Player_charge_updated"]
[connection signal="projectile_exploded" from="Projectiles" to="Terrain" method="_on_Projectiles_projectile_exploded"]
[connection signal="projectile_exploded" from="Projectiles" to="." method="_on_Projectiles_projectile_exploded"]
[connection signal="timeout" from="StateMachine/Preturn/DurationTimer" to="StateMachine/Preturn" method="go_to_turn"]
[connection signal="timeout" from="StateMachine/Turn/DurationTimer" to="StateMachine/Turn" method="go_to_postturn"]
[connection signal="timeout" from="StateMachine/Postturn/DurationTimer" to="StateMachine/Postturn" method="go_to_postturn"]
